# template-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/controllers/: bot_controller.rs  mod.rs
src/models/: action.rs  action_dto.rs  bot.rs  bot_data.rs  bot_info.rs  bot_state.rs  bot_type.rs  case.rs  case_content.rs  coord.rs  game.rs  game_bot.rs  item.rs  item_type.rs  mod.rs  play_response.rs
src/services/: bot_service.rs
